new code for schedules

--- a/report/pers_sched/latex/biometrics_submission/mainmatter/sim_study.tex
+++ b/report/pers_sched/latex/biometrics_submission/mainmatter/sim_study.tex
@@ -21,13 +21,13 @@ The pooled estimates of the aforementioned measures are summarized in Table \ref
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/sim_study/meanNbVsOffset_all.eps}}
-\caption{Estimated mean number of biopsies and mean offset (months) for various schedules, obtained from the simulation study with 500 simulated datasets.}
+\caption{Estimated mean number of biopsies conducted until PCa is detected, and mean offset (difference in time at which PCa progression is detected and the true time of PCa progression, in months) for various biopsy schedules, obtained from the simulation study with 500 simulated datasets. Types of personalized schedules: expected time of GR (Exp. GR time), median time of GR (Med. GR time), schedules based on dynamic risk of GR (Dyn. risk GR), a hybrid approach between median time of GR and dynamic risk of GR (Hybrid). Annual corresponds to a schedule of yearly biopsies and PRIAS corresponds to biopsies as per PRIAS protocol.}
 \label{fig : meanNbVsOffset}
 \end{figure}
 
 %124781 = 41484 + 41423 + 41874
 \begin{table}
-\caption{Estimated mean and standard deviation of the number of biopsies $N^S_j$ and offset $O^S_j$ (months) for various schedules, obtained from the simulation study with 500 simulated datasets.}
+\caption{Estimated mean and standard deviation of the number of biopsies $N^S_j$ conducted until PCa is detected, and offset $O^S_j$ (difference in time at which PCa progression is detected and the true time of PCa progression, in months) for various biopsy schedules, obtained from the simulation study with 500 simulated datasets. Types of personalized schedules: expected time of GR (Exp. GR time), median time of GR (Med. GR time), schedules based on dynamic risk of GR (Dyn. risk GR), a hybrid approach between median time of GR and dynamic risk of GR (Hybrid). Annual corresponds to a schedule of yearly biopsies and PRIAS corresponds to biopsies as per PRIAS protocol. Patients in subgroup $G_1$ have the fastest PCa progression rate, whereas patients in subgroup $G_3$ have the slowest PCa progression rate.}
 \label{table : sim_study_pooled_estimates}
 \begin{tabular}{lrrrr}
 \Hline
@@ -84,13 +84,13 @@ The performance of each schedule differs for the three subgroups $G_1, G_2$ and 
 
 \begin{figure}[!htb]
 \centerline{\includegraphics[width=\columnwidth]{images/sim_study/nbBoxPlot_all.eps}}
-\caption{Boxplot showing variation in number of biopsies conducted by various schedules, obtained from the simulation study with 500 simulated datasets.}
+\caption{Boxplot showing variation in number of biopsies conducted by various biopsy schedules until PCa progression is detected, obtained from the simulation study with 500 simulated datasets. Types of personalized schedules: expected time of GR (Exp. GR time), median time of GR (Med. GR time), schedules based on dynamic risk of GR (Dyn. risk GR), a hybrid approach between median time of GR and dynamic risk of GR (Hybrid). Annual corresponds to a schedule of yearly biopsies and PRIAS corresponds to biopsies as per PRIAS protocol.}
 \label{fig : nbBoxPlot_all}
 \end{figure}
 
 \begin{figure}[!htb]
 \centerline{\includegraphics[width=\columnwidth]{images/sim_study/offsetBoxPlot_all.eps}}
-\caption{Boxplot showing variation in biopsy offset (months) for various schedules, obtained from the simulation study with 500 simulated datasets.}
+\caption{Boxplot showing variation in biopsy offset (difference in time at which PCa progression is detected and the true time of PCa progression, in months) for various schedules, obtained from the simulation study with 500 simulated datasets. Types of personalized schedules: expected time of GR (Exp. GR time), median time of GR (Med. GR time), schedules based on dynamic risk of GR (Dyn. risk GR), a hybrid approach between median time of GR and dynamic risk of GR (Hybrid). Annual corresponds to a schedule of yearly biopsies and PRIAS corresponds to biopsies as per PRIAS protocol.}
 \label{fig : offsetBoxPlot_all}
 \end{figure}
 
