--- a/report/pers_sched/latex/biometrics_submission/replyletter-2/reply_letter.tex
+++ b/report/pers_sched/latex/biometrics_submission/replyletter-2/reply_letter.tex
@@ -11,6 +11,7 @@
 \usepackage{amsfonts,amsmath,graphicx,graphics}
 \usepackage{dirtytalk}
  \usepackage{xr}
+ \usepackage{caption}
 
 \usepackage{tikz}
 \usepackage{tikzscale}
